--- a/website/src/css/customTheme.scss
+++ b/website/src/css/customTheme.scss
@@ -10,7 +10,7 @@
   --subtle: #7a7a7a;
   --divider: #ececec;
   --tintColor: #f7f7f7;
-  --rn-note-background: rgba(255, 229, 100, 0.3);
+  --rn-note-background: rgba(255, 229, 100, 0.25);
   --ifm-font-size-base: 17px;
   --ifm-spacing-horizontal: 16px;
   --ifm-navbar-item-padding-horizontal: 20px;
@@ -33,6 +33,7 @@
   --ifm-alert-color: var(--ifm-font-color-base);
   --ifm-pagination-nav-color-hover: var(--ifm-color-emphasis-300);
   --ifm-navbar-sidebar-width: 50%;
+  --doc-sidebar-width: 100%;
 }
 
 html[data-theme="light"] {
@@ -60,6 +61,10 @@ html[data-theme="dark"] {
   max-width: 1400px;
   width: 1400px;
   align-self: center;
+
+  h1[class^="docTitle"] {
+    font-size: 2.8rem;
+  }
 }
 
 @media (max-width: 1416px) {
@@ -135,6 +140,12 @@ hr {
       line-height: 1.3em;
       padding: 10px;
       text-align: left;
+
+      code {
+        display: inline-block;
+        line-height: 1.15em;
+        vertical-align: middle;
+      }
     }
 
     hr {
@@ -267,7 +278,7 @@ html[data-theme="dark"] article .badge {
   max-width: 1280px;
 
   h1 {
-    font-size: 3rem;
+    font-size: 2.8rem;
   }
 
   h2 {
@@ -364,6 +375,11 @@ html[data-theme="dark"] .avatar__name a {
   .navbar__logo {
     width: 38px;
     height: 34px;
+    transition: transform 0.5s;
+  }
+
+  .navbar__brand:hover .navbar__logo {
+    transform: rotate(180deg) scale(0.9);
   }
 
   .react-toggle {
@@ -496,9 +512,17 @@ html[data-theme="dark"] .navbar-sidebar {
   background: var(--ifm-background-color);
 }
 
-@media (max-width: 750px) {
-  .navbar .DocSearch-Button {
-    padding: 0 12px;
+@media (max-width: 1080px) {
+  .navbar {
+    .DocSearch-Button {
+      padding: 0 12px;
+    }
+
+    .DocSearch-Button-Key,
+    .DocSearch-Button-KeySeparator,
+    .DocSearch-Button-Placeholder {
+      display: none;
+    }
   }
 }
 
@@ -508,6 +532,14 @@ div[class^="docSidebarContainer"] {
   width: 266px;
   min-width: 266px;
   margin-right: 16px;
+}
+
+@media only screen and (min-width: 997px) {
+  div[class^="docSidebarContainer"] {
+    .menu {
+      padding: 12px;
+    }
+  }
 }
 
 .menu__list {
@@ -564,9 +596,10 @@ html[data-theme="dark"] .menu {
   @extend %scrollbar-style-dark;
 }
 
-@media (min-width: 997px) {
-  div[class^="docSidebarContainer"] .menu {
-    padding: 16px 12px;
+@media only screen and (max-width: 1120px) {
+  div[class^="docSidebarContainer"] {
+    width: 240px;
+    min-width: 240px;
   }
 }
 
@@ -632,7 +665,7 @@ div[class^="tableOfContents"] {
   }
 
   small {
-    font-size: 90%;
+    font-size: 13px;
   }
 
   time,
@@ -645,7 +678,7 @@ div[class^="tableOfContents"] {
   }
 }
 
-@media only screen and (min-width: 540px) and (max-width: 1023px) {
+@media only screen and (min-width: 540px) and (max-width: 996px) {
   .docMetadata .col {
     flex-basis: 50% !important;
     max-width: 50% !important;
@@ -669,6 +702,10 @@ div[class^="tableOfContents"] {
     font-weight: 500;
   }
 
+  .pagination-nav__sublabel {
+    font-size: 15px;
+  }
+
   .pagination-nav__link:hover {
     background: var(--ifm-menu-color-background-hover);
     border-color: var(--ifm-color-emphasis-300);
@@ -687,18 +724,18 @@ div[class^="tableOfContents"] {
   }
 
   .text--center {
-    color: #6a6f7c;
+    color: #7f848f;
     font-size: 13px;
   }
 
   .footer__item {
-    font-size: 15px;
+    font-size: 14px;
     padding: 8px 0 0;
     min-height: 30px;
   }
 
   .footer__title {
-    color: #6a6f7c;
+    color: #7f848f;
     font-size: 14px;
     font-weight: 500;
     margin: 0 0 8px;
@@ -714,13 +751,19 @@ div[class^="tableOfContents"] {
     line-height: 1.44;
     display: inline-block;
   }
+
+  .footer__links {
+    margin-bottom: 8px;
+  }
 }
 
-@media (max-width: 996px) {
+@media only screen and (max-width: 996px) {
   .footer {
     .footer__col {
-      flex-basis: 32% !important;
-      max-width: 32% !important;
+      text-align: center;
+      flex-basis: 48% !important;
+      max-width: 48% !important;
+      margin-bottom: 28px;
     }
 
     .footer__links {
@@ -729,22 +772,12 @@ div[class^="tableOfContents"] {
   }
 }
 
-@media (max-width: 768px) {
-  .footer .footer__col {
-    flex-basis: 48% !important;
-    max-width: 48% !important;
-  }
-}
-
-@media (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   .footer {
     .footer__col {
       flex-basis: 99% !important;
       max-width: 99% !important;
       margin-bottom: 24px;
-    }
-
-    .footer__links {
       text-align: center;
     }
   }
@@ -803,7 +836,7 @@ div[class^="announcementBarContent"] {
   }
 }
 
-@media (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   .announcement {
     font-size: 15px;
     line-height: 22px;
@@ -888,8 +921,8 @@ div[class^="announcementBarContent"] {
 }
 
 html[data-theme="dark"] .banner-native-code-required {
-  background: rgba(165, 175, 219, 0.35);
-  border-left-color: #363c70;
+  background: rgba(123, 132, 172, 0.35);
+  border-left-color: #5d659a;
 
   h2,
   h3 {
@@ -898,7 +931,7 @@ html[data-theme="dark"] .banner-native-code-required {
 
   h2:before,
   h3:before {
-    background-color: #363c70;
+    background-color: #5d659a;
   }
 
   code {
@@ -1106,6 +1139,7 @@ td .label {
   display: inline-block;
   position: relative;
   top: 1px;
+  margin-right: -6px;
   padding: 3px 6px;
   border: 1px solid #86b300;
   border-radius: 3px;
@@ -1248,7 +1282,7 @@ html[data-theme="dark"] .docsRating {
   color: #cee9f3;
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 996px) {
   .docsRating {
     width: 100%;
     margin: 36px 0 0 !important;
@@ -1281,7 +1315,7 @@ html[data-theme="dark"] .docsRating {
   }
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 996px) {
   .two-columns {
     gap: 0;
     grid-template-columns: 1fr;
@@ -1398,7 +1432,7 @@ html[data-theme="dark"] {
   }
 }
 
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 996px) {
   .container.margin-vert--lg .row .col.col--2 {
     display: none;
   }
