--- a/cnwebsite/src/css/customTheme.scss
+++ b/cnwebsite/src/css/customTheme.scss
@@ -7,7 +7,7 @@
   --deepdark: #20232a;
   --light: #373940;
   --text: #1a1a1a;
-  --subtle: #7a7a7a;
+  --subtle: #767676;
   --divider: #ececec;
   --tintColor: #f7f7f7;
   --rn-note-background: rgba(255, 229, 100, 0.25);
@@ -17,7 +17,7 @@
   --ifm-menu-link-padding-horizontal: 0;
   --ifm-toc-padding-vertical: 6px;
   --ifm-toc-link-color: var(--ifm-color-emphasis-700);
-  --ifm-code-font-size: 85%;
+  --ifm-code-font-size: 90%;
   --ifm-code-border-radius: 3px;
   --ifm-blockquote-color: var(--ifm-font-color-base);
   --ifm-table-head-color: var(--subtle);
@@ -34,6 +34,7 @@
   --ifm-pagination-nav-color-hover: var(--ifm-color-emphasis-300);
   --ifm-navbar-sidebar-width: 66%;
   --doc-sidebar-width: 100%;
+  --ifm-table-border-width: 0.005rem;
 }
 
 html[data-theme="light"] {
@@ -46,13 +47,17 @@ html[data-theme="dark"] {
   --ifm-toc-border-color: var(--dark);
   --ifm-color-emphasis-300: var(--dark);
   --ifm-hr-border-color: var(--dark);
-  --docsearch-searchbox-background: var(--ifm-background-color);
-  --docsearch-modal-background: var(--deepdark);
-  --docsearch-footer-background: var(--dark);
-  --docsearch-key-gradient: var(--deepdark);
-  --docsearch-key-shadow: inset 0 -2px 0 0 var(--light),
-    inset 0 0 1px 1px var(--light), 0 1px 2px 1px var(--ifm-table-border-color);
-  --docsearch-container-background: rgba(0, 0, 0, 0.6);
+
+  *[class^="DocSearch"] {
+    --docsearch-searchbox-background: var(--ifm-background-color);
+    --docsearch-modal-background: var(--deepdark);
+    --docsearch-footer-background: var(--dark);
+    --docsearch-key-gradient: var(--deepdark);
+    --docsearch-key-shadow: inset 0 -2px 0 0 var(--light),
+      inset 0 0 1px 1px var(--light),
+      0 1px 2px 1px var(--ifm-table-border-color);
+    --docsearch-container-background: rgba(0, 0, 0, 0.6);
+  }
 }
 
 /* Content */
@@ -67,12 +72,11 @@ html[data-theme="dark"] {
   }
 }
 
-@media (max-width: 1416px) {
-  #__docusaurus {
-    max-width: 100%;
-    overflow-x: hidden;
-  }
+main[class^="docMainContainer"] > .container {
+  padding-top: 2rem !important;
+}
 
+@media (max-width: 1416px) {
   .main-wrapper {
     max-width: 100%;
     width: 100%;
@@ -87,6 +91,19 @@ html[data-theme="dark"] {
   }
 }
 
+@media (min-width: 1440px) {
+  .container {
+    max-width: auto !important;
+  }
+}
+
+@media (min-width: 997px) {
+  main[class^="docMainContainer"] {
+    width: calc(100% - var(--doc-sidebar-width));
+    display: contents;
+  }
+}
+
 hr {
   border: 0;
   height: 0.01rem;
@@ -94,6 +111,12 @@ hr {
 }
 
 .markdown {
+  code {
+    border-color: transparent;
+    vertical-align: initial;
+    font-size: var(--ifm-code-font-size) !important;
+  }
+
   blockquote {
     background-color: var(--rn-note-background);
     border-left: 8px solid var(--ifm-color-warning);
@@ -116,6 +139,8 @@ hr {
       background-color: transparent;
       font-size: 90%;
       padding: 0 6px;
+      top: -1px;
+      position: relative;
     }
   }
 
@@ -131,6 +156,7 @@ hr {
 
     thead tr {
       background-color: var(--divider);
+      border: 0;
     }
 
     tr th {
@@ -141,14 +167,14 @@ hr {
     }
 
     tr td {
-      font-size: 14px;
+      font-size: 90%;
       line-height: 1.3em;
       padding: 10px;
       text-align: left;
 
       code {
         display: inline-block;
-        line-height: 1.1em;
+        line-height: 1.2em;
         vertical-align: top;
       }
 
@@ -168,6 +194,26 @@ hr {
 
     .widerColumn {
       width: 180px;
+    }
+
+    .table-heading {
+      font-weight: var(--ifm-table-head-font-weight);
+      border-bottom: 2px solid var(--ifm-table-border-color);
+    }
+
+    div[class^="codeBlockContainer"] {
+      &, & pre {
+        margin-bottom: 0;
+      }
+
+      pre code {
+        padding: 12px 16px;
+        white-space: break-spaces;
+      }
+
+      button {
+        display: none;
+      }
     }
   }
 
@@ -190,7 +236,7 @@ hr {
     background-color: var(--light);
   }
 
-  div[class^="mdxCodeBlock"] {
+  div[class^="codeBlockLines"] {
     font-size: 80%;
   }
 
@@ -286,6 +332,18 @@ html[data-theme="dark"] article .badge {
   }
 }
 
+/* Home page */
+
+.homepage {
+  div[class^="codeBlockContainer"] {
+    margin-bottom: 0;
+
+    .prism-code {
+      font-size: 90%;
+    }
+  }
+}
+
 /* Community page */
 
 .community-page {
@@ -313,6 +371,15 @@ html[data-theme="dark"] article .badge {
   .row .col p a {
     @extend %link-style;
   }
+
+  .row .col.col--2 {
+    --ifm-col-width: calc(3 / 12 * 100%) !important;
+  }
+
+  .col--offset-2 {
+    --ifm-col-width: calc(9 / 12 * 100%) !important;
+    margin-left: 0 !important;
+  }
 }
 
 html[data-theme="dark"] .community-page {
@@ -321,9 +388,17 @@ html[data-theme="dark"] .community-page {
   }
 }
 
+@media (max-width: 996px) {
+  .community-page {
+    .col--offset-2 {
+      --ifm-col-width: 100% !important;
+    }
+  }
+}
+
 /* Version warning */
 
-div[class*="docItemWrapper"] .row .col {
+div[class*="docs-wrapper"] .row .col {
   > .alert--warning {
     background-color: rgba(100, 215, 255, 0.3);
   }
@@ -378,6 +453,7 @@ html[data-theme="dark"] .avatar__name a {
     &.navbar__link {
       font-weight: 300;
       font-size: 18px;
+      user-select: none;
     }
 
     &.dropdown a {
@@ -456,6 +532,10 @@ html[data-theme="dark"] .avatar__name a {
     }
   }
 
+  .navbar__items div[class^="searchBox"] {
+    padding-left: 14px;
+  }
+
   .navbar-github-link {
     &:after {
       transition: opacity 0.2s;
@@ -489,6 +569,7 @@ html[data-theme="dark"] .avatar__name a {
 
 .navbar-sidebar {
   background: var(--divider);
+  max-width: 400px;
 
   .navbar-sidebar__brand {
     background-color: var(--deepdark);
@@ -498,10 +579,7 @@ html[data-theme="dark"] .avatar__name a {
     padding: 12px;
 
     .menu__list-item a {
-      padding-left: 12px;
-      padding-right: 12px;
-      padding-top: 6px;
-      padding-bottom: 8px;
+      padding: 6px 12px 8px;
     }
   }
 
@@ -540,19 +618,37 @@ html[data-theme="dark"] .navbar-sidebar {
   }
 }
 
+@media (max-width: 480px) {
+  .navbar-sidebar {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
 /* Sidebar */
 
-div[class^="docSidebarContainer"] {
-  width: 266px;
-  min-width: 266px;
+aside[class^="docSidebarContainer"] {
   margin-right: 16px;
+
+  --doc-sidebar-width: 266px;
+  @media only screen and (max-width: 1120px) {
+    --doc-sidebar-width: 240px;
+  }
 }
 
 @media only screen and (min-width: 997px) {
-  div[class^="docSidebarContainer"] {
+  aside[class^="docSidebarContainer"] {
     .menu {
       padding: 12px;
     }
+  }
+}
+
+@media only screen and (max-width: 996px) {
+  aside[class^="docSidebarContainer"] {
+    width: 0 !important;
+    min-width: 0 !important;
+    margin-right: 0;
   }
 }
 
@@ -562,10 +658,12 @@ div[class^="docSidebarContainer"] {
   .menu__list-item {
     margin-bottom: 2px;
     margin-top: 2px;
+    user-select: none;
   }
 
   .menu__list {
     .menu__link {
+      line-height: 20px;
       font-size: 13px;
       padding: 3px 12px;
       font-weight: normal;
@@ -587,6 +685,7 @@ div[class^="docSidebarContainer"] {
     &:after {
       background-size: 1.66rem 1.66rem;
       margin-right: -6px;
+      margin-top: -1px;
     }
   }
 
@@ -612,18 +711,13 @@ html[data-theme="dark"] .menu {
   @extend %scrollbar-style-dark;
 }
 
-@media only screen and (max-width: 1120px) {
-  div[class^="docSidebarContainer"] {
-    width: 240px;
-    min-width: 240px;
-  }
-}
-
 /* TOC */
 
 div[class^="tableOfContents"] {
   min-width: 100%;
   width: 100%;
+
+  @extend %scrollbar-style;
 }
 
 .table-of-contents {
@@ -646,6 +740,7 @@ div[class^="tableOfContents"] {
     code {
       background: none;
       padding: 0;
+      border: 0;
     }
   }
 
@@ -664,6 +759,10 @@ div[class^="tableOfContents"] {
   }
 }
 
+html[data-theme="dark"] div[class^="tableOfContents"] {
+  @extend %scrollbar-style-dark;
+}
+
 /* Docs Metadata */
 
 .docMetadata {
@@ -680,8 +779,9 @@ div[class^="tableOfContents"] {
     }
   }
 
-  small {
+  .lastUpdated {
     font-size: 13px;
+    text-align: right;
   }
 
   time,
@@ -740,7 +840,7 @@ div[class^="tableOfContents"] {
   }
 
   .text--center {
-    color: #7f848f;
+    color: #858a96;
     font-size: 13px;
   }
 
@@ -748,10 +848,14 @@ div[class^="tableOfContents"] {
     font-size: 14px;
     padding: 8px 0 0;
     min-height: 30px;
+
+    a:hover svg {
+      color: var(--brand);
+    }
   }
 
   .footer__title {
-    color: #7f848f;
+    color: #858a96;
     font-size: 14px;
     font-weight: 500;
     margin: 0 0 8px;
@@ -770,6 +874,17 @@ div[class^="tableOfContents"] {
 
   .footer__links {
     margin-bottom: 8px;
+  }
+
+  img[class^="themedImage"] {
+    display: initial !important;
+    height: 54px;
+  }
+
+  svg[class^="iconExternalLink"] {
+    color: var(--subtle);
+    right: -1px;
+    width: 9px;
   }
 }
 
@@ -868,7 +983,7 @@ div[class^="announcementBarContent"] {
   margin-bottom: 2em;
   position: relative;
   overflow: hidden;
-  width: calc(100% + 2em);
+  width: calc(100% + 1em);
   left: -1em;
   color: var(--dark);
 }
@@ -1039,14 +1154,6 @@ td .color-box {
 
     &:before {
       border-right-color: #6170af;
-    }
-  }
-
-  &.vr {
-    background: #a05fc1;
-
-    &:before {
-      border-right-color: #a05fc1;
     }
   }
 
@@ -1276,10 +1383,10 @@ html[data-theme="dark"] .component {
   padding: 16px 30px 16px 40px;
   min-height: 66px;
   margin-top: 42px;
-  margin-left: -40px;
+  margin-left: -32px;
   background-color: rgba(100, 215, 255, 0.3);
   text-align: center;
-  color: #0780ab;
+  color: #057594;
   line-height: 32px;
   font-weight: 500;
   border-radius: 0 var(--ifm-global-radius) var(--ifm-global-radius) 0;
@@ -1323,7 +1430,7 @@ html[data-theme="dark"] .docsRating {
 /* Snack Player */
 
 .snack-player {
-  height: 505px;
+  height: 544px;
   width: 100%;
   overflow: hidden;
   margin-bottom: 24px;
@@ -1356,7 +1463,7 @@ html[data-theme="dark"] .docsRating {
 
 /* Blog sidebar */
 
-.main-wrapper:not(.community-page) {
+.main-wrapper.blog-wrapper {
   .container.margin-vert--lg {
     max-width: calc(100% - (var(--ifm-spacing-horizontal)) * 4);
     margin-top: 0 !important;
@@ -1381,7 +1488,7 @@ html[data-theme="dark"] .docsRating {
     }
   }
 
-  .container .row .col.col--2 {
+  .container .row .col.col--3 {
     --ifm-col-width: calc(5 / 24 * 100%);
     padding-left: 0;
 
@@ -1405,11 +1512,17 @@ html[data-theme="dark"] .docsRating {
         border-bottom: 0.01rem solid var(--ifm-table-border-color);
       }
 
+      h3,
+      h4,
+      li {
+        user-select: none;
+      }
+
       @extend %scrollbar-style;
     }
   }
 
-  .container .row .col.col--8 {
+  .container .row .col.col--7 {
     --ifm-col-width: calc(15 / 24 * 100%);
     padding: 24px 16px 24px 20px;
 
@@ -1420,8 +1533,8 @@ html[data-theme="dark"] .docsRating {
 }
 
 html[data-theme="dark"] {
-  .main-wrapper:not(.community-page) {
-    .row .col.col--2 div[class^="sidebar"] {
+  .main-wrapper.blog-wrapper {
+    .row .col.col--3 div[class^="sidebar"] {
       @extend %scrollbar-style-dark;
     }
 
@@ -1435,11 +1548,11 @@ html[data-theme="dark"] {
 }
 
 @media only screen and (max-width: 996px) {
-  .container.margin-vert--lg .row .col.col--2 {
+  .container.margin-vert--lg .row .col.col--3 {
     display: none;
   }
 
-  .container.margin-vert--lg .row .col.col--8 {
+  .container.margin-vert--lg .row .col.col--7 {
     --ifm-col-width: 100% !important;
   }
 
