--- a/cnwebsite/src/css/customTheme.scss
+++ b/cnwebsite/src/css/customTheme.scss
@@ -13,7 +13,7 @@
   --rn-note-background: rgba(255, 229, 100, 0.25);
   --ifm-font-size-base: 17px;
   --ifm-spacing-horizontal: 16px;
-  --ifm-navbar-item-padding-horizontal: 20px;
+  --ifm-navbar-item-padding-horizontal: 18px;
   --ifm-menu-link-padding-horizontal: 0;
   --ifm-toc-padding-vertical: 6px;
   --ifm-toc-link-color: var(--ifm-color-emphasis-700);
@@ -34,8 +34,8 @@
   --ifm-pagination-nav-color-hover: var(--ifm-color-emphasis-300);
   --doc-sidebar-width: 100%;
   --ifm-table-border-width: 0.005rem;
-
   --ifm-navbar-sidebar-width: 100%;
+
   @media (min-width: 340px) {
     --ifm-navbar-sidebar-width: 340px;
   }
@@ -74,6 +74,12 @@ html[data-theme="dark"] {
   h1[class^="docTitle"] {
     font-size: 2.8rem;
   }
+
+  .admonition-content {
+    a {
+      text-decoration: none;
+    }
+  }
 }
 
 main[class^="docMainContainer"] > .container {
@@ -89,26 +95,13 @@ main[class^="docMainContainer"] > .container {
 
 @media (max-width: 1320px) and (min-width: 997px) {
   .container {
-    max-width: calc(
-      var(--ifm-container-width) - 125px - var(--ifm-spacing-horizontal) * 2
-    );
-  }
-}
-
-@media (min-width: 1440px) {
-  .container {
-    max-width: inherit !important;
+    max-width: calc(var(--ifm-container-width) - var(--doc-sidebar-width) / 2);
   }
 }
 
 @media (min-width: 997px) {
   main[class^="docMainContainer"] {
-    width: calc(100% - var(--doc-sidebar-width));
-    display: contents;
-  }
-
-  div[class*="docItemCol"] {
-    max-width: inherit !important;
+    max-width: calc(100% - var(--doc-sidebar-width) + 44px);
   }
 }
 
@@ -442,6 +435,40 @@ html[data-theme="dark"] .avatar__name a {
 
 .avatar__subtitle {
   margin-top: 0;
+  font-weight: 600;
+  color: var(--subtle);
+}
+
+article header h2 a {
+  color: var(--ifm-font-color-base);
+
+  &:hover {
+    color: var(--light);
+  }
+}
+
+div[class^="blogPostData"] {
+  color: var(--subtle);
+}
+
+.main-wrapper.blog-wrapper .container.margin-vert--lg .col.text--right a {
+  padding: 8px 16px !important;
+}
+
+a[class*="tagRegular"] {
+  padding: 6px 12px !important;
+
+  &:hover {
+    background: var(--ifm-menu-color-background-active);
+    --docusaurus-tag-list-border: inherit;
+  }
+}
+
+.blog-wrapper {
+  .pagination-nav__item .pagination-nav__label:before,
+  .pagination-nav__item--next .pagination-nav__label:after {
+    display: none;
+  }
 }
 
 /* Navbar */
@@ -467,8 +494,8 @@ html[data-theme="dark"] .avatar__name a {
 
   .navbar__item {
     &.navbar__link {
-      font-weight: 300;
-      font-size: 18px;
+      font-weight: 400;
+      font-size: 17px;
       user-select: none;
     }
 
@@ -581,11 +608,11 @@ html[data-theme="dark"] .avatar__name a {
     display: flex;
     width: calc(100% + 40px);
     height: 4px;
-    margin-top: -3px;
+    margin-top: -4px;
     margin-left: -20px;
     margin-right: -20px;
     position: relative;
-    top: 17px;
+    top: 18px;
     background: var(--brand);
   }
 }
@@ -617,6 +644,12 @@ So we need to "revert" some CSS vars to not enforce dark mode
       color: var(--ifm-color-emphasis-700);
       padding: 6px 12px 8px;
     }
+
+    .menu__list-item-collapsible a[class*="menuLinkText"] {
+      font-weight: 600;
+      font-size: 14px;
+      background: var(--ifm-background-color) !important;
+    }
   }
 
   .navbar-github-link {
@@ -640,10 +673,11 @@ html[data-theme="dark"] .navbar-sidebar {
   background: var(--ifm-background-color);
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 1200px) {
   .navbar {
     .DocSearch-Button {
       padding: 0 12px;
+      max-width: 40px;
     }
 
     .DocSearch-Button-Key,
@@ -658,6 +692,11 @@ html[data-theme="dark"] .navbar-sidebar {
 
 aside[class^="docSidebarContainer"] {
   margin-right: 16px;
+
+  .menu > .menu__list > .menu__list-item {
+    margin-bottom: 4px;
+  }
+
   --doc-sidebar-width: 266px;
 
   .thin-scrollbar {
@@ -685,7 +724,11 @@ aside[class^="docSidebarContainer"] {
   }
 
   .menu__list-item .menu__list-item .menu__list-item {
-    padding-left: 8px;
+    padding-left: 8px !important;
+  }
+
+  .menu__list-item-collapsible a[class*="menuLinkText"] {
+    background: var(--ifm-background-color) !important;
   }
 
   @media only screen and (max-width: 1120px) {
@@ -710,13 +753,26 @@ aside[class^="docSidebarContainer"] {
 }
 
 .menu__list {
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   transition: none !important;
+  height: auto !important;
 
   .menu__list-item {
     margin-bottom: 2px;
     margin-top: 2px;
     user-select: none;
+  }
+
+  .menu__link--sublist {
+    font-size: 15px;
+    font-weight: 600;
+    padding: 5px 12px !important;
+    color: var(--light);
+
+    &:after {
+      background-size: 1.66rem 1.66rem;
+      margin-right: -6px;
+    }
   }
 
   .menu__list {
@@ -729,8 +785,15 @@ aside[class^="docSidebarContainer"] {
     }
 
     .menu__link--sublist {
-      font-weight: 600 !important;
-      margin-top: 4px;
+      font-size: 14px !important;
+    }
+
+    .menu__list .menu__link {
+      padding: 3px 12px;
+    }
+
+    .menu__list .menu__link--active {
+      padding-left: 12px;
     }
   }
 
@@ -738,12 +801,19 @@ aside[class^="docSidebarContainer"] {
     border-left-width: 4px;
     border-left-style: solid;
     border-left-color: var(--ifm-menu-color-active) !important;
-    font-weight: 700 !important;
-    padding-left: 8px;
+    font-weight: 600 !important;
+    padding-left: 8px !important;
+    background: var(--ifm-code-background);
   }
 
   .menu__list-item--collapsed .menu__list {
     margin-bottom: 0;
+  }
+}
+
+.menu__list-item.menu__list-item--collapsed {
+  .menu__list {
+    height: 0 !important;
   }
 }
 
@@ -754,6 +824,14 @@ aside[class^="docSidebarContainer"] {
 
 html[data-theme="dark"] .menu {
   @extend %scrollbar-style-dark;
+
+  .menu__list > .menu__list-item > .menu__link--sublist {
+    color: var(--ifm-color-emphasis-400);
+  }
+
+  .menu__list .menu__list .menu__link--sublist {
+    color: var(--subtle);
+  }
 }
 
 /* TOC */
@@ -806,6 +884,20 @@ div[class^="tableOfContents"] {
 
 html[data-theme="dark"] div[class^="tableOfContents"] {
   @extend %scrollbar-style-dark;
+}
+
+button[class*="tocCollapsibleButton"] {
+  font-weight: 600;
+  color: var(--ifm-color-content-secondary);
+}
+
+.navbar-sidebar {
+  background: var(--ifm-background-surface-color);
+}
+
+.navbar-sidebar__back {
+  color: var(--ifm-color-content-secondary);
+  background: var(--ifm-footer-background-color);
 }
 
 /* Doc Item footer metadata */
@@ -957,21 +1049,6 @@ html[data-theme="dark"] div[class^="tableOfContents"] {
       text-align: center;
     }
   }
-}
-
-/* Blog */
-
-article header h2 a {
-  color: var(--ifm-font-color-base);
-
-  &:hover {
-    color: var(--light);
-  }
-}
-
-.avatar__subtitle {
-  font-weight: 600;
-  color: var(--subtle);
 }
 
 /* Announcement banner */
@@ -1596,6 +1673,12 @@ html[data-theme="dark"] {
   }
 }
 
+@media only screen and (max-width: 1320px) and (min-width: 997px) {
+  .container.margin-vert--lg .row .col.col--3 {
+    margin-left: -32px;
+  }
+}
+
 @media only screen and (max-width: 996px) {
   .container.margin-vert--lg .row .col.col--3 {
     display: none;
@@ -1631,7 +1714,6 @@ html[data-theme="dark"] {
     }
   }
 }
-
 .pushy {
   position: relative;
   &:after {
