--- a/cnwebsite/src/css/customTheme.scss
+++ b/cnwebsite/src/css/customTheme.scss
@@ -1,7 +1,6 @@
 @import "shared";
 
 :root {
-  --ifm-color-primary: #06bcee;
   --brand: #61dafb;
   --dark: #282c34;
   --deepdark: #20232a;
@@ -11,6 +10,9 @@
   --divider: #ececec;
   --tintColor: #f7f7f7;
   --rn-note-background: rgba(255, 229, 100, 0.25);
+  --ifm-font-family-base: "Optimistic Display", system-ui, -apple-system,
+    sans-serif;
+  --ifm-color-primary: #06bcee;
   --ifm-font-size-base: 17px;
   --ifm-spacing-horizontal: 16px;
   --ifm-navbar-item-padding-horizontal: 18px;
@@ -20,6 +22,7 @@
   --ifm-code-font-size: 90%;
   --ifm-code-border-radius: 3px;
   --ifm-blockquote-color: var(--ifm-font-color-base);
+  --ifm-blockquote-font-size: 16px;
   --ifm-table-head-color: var(--subtle);
   --ifm-link-hover-decoration: none;
   --ifm-navbar-background-color: var(--deepdark);
@@ -32,7 +35,6 @@
   --ifm-alert-border-radius: 0;
   --ifm-alert-color: var(--ifm-font-color-base);
   --ifm-pagination-nav-color-hover: var(--ifm-color-emphasis-300);
-  --doc-sidebar-width: 100%;
   --ifm-table-border-width: 0.005rem;
   --ifm-navbar-sidebar-width: 100%;
 
@@ -44,6 +46,7 @@
 html[data-theme="light"] {
   --ifm-code-background: rgba(0, 0, 0, 0.06);
   --docsearch-container-background: rgba(32, 35, 42, 0.6);
+  --ifm-link-color: #357da1;
 }
 
 html[data-theme="dark"] {
@@ -64,12 +67,51 @@ html[data-theme="dark"] {
   }
 }
 
+:root {
+  --doc-sidebar-width: 266px !important;
+}
+
+::marker {
+  color: var(--ifm-font-color-secondary);
+}
+
+/* Font */
+
+@font-face {
+  font-family: "Optimistic Display";
+  src: url("https://facebookmicrosites.github.io/design/public/fonts/OptimisticDisplayLight-199be98cf48e5b4c688356b08a02362c.woff2")
+    format("woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Optimistic Display";
+  src: url("https://facebookmicrosites.github.io/design/public/fonts/OptimisticDisplayRegular-b0e4e99f91efd0021c3ab8e4df0e6e1b.woff2")
+    format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Optimistic Display";
+  src: url("https://facebookmicrosites.github.io/design/public/fonts/OptimisticDisplayBold-3a50548145f36de582c3b36d9626f4d6.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
 /* Content */
 
 .main-wrapper {
   max-width: 1400px;
   width: 1400px;
   align-self: center;
+  font-weight: 300;
+
+  div[class*="docPage"] {
+    justify-content: center;
+  }
 
   h1[class^="docTitle"] {
     font-size: 2.8rem;
@@ -142,6 +184,18 @@ hr {
       padding: 0 6px;
       top: -1px;
       position: relative;
+    }
+
+    .hermes-logo {
+      float: right;
+      margin: -30px 4px 0;
+    }
+
+    @media screen and (max-width: 960px) {
+      .hermes-logo {
+        margin: 0 4px 30px;
+        width: 100%;
+      }
     }
   }
 
@@ -238,6 +292,16 @@ hr {
     background-color: var(--light);
   }
 
+  div[class^="codeBlockContainer"] {
+    box-shadow: none;
+    margin-bottom: 1rem;
+  }
+
+  div[class^="codeBlockContent"] {
+    display: inline-grid;
+    min-width: 100%;
+  }
+
   div[class^="codeBlockLines"] {
     font-size: 80%;
   }
@@ -307,10 +371,10 @@ html[data-theme="dark"] {
   }
 }
 
-.markdown .hash-link,
+.mdx-page .hash-link,
 .community-page .hash-link,
-html[data-theme="dark"] .markdown .hash-link,
-html[data-theme="dark"] .community-page .hash-link {
+html[data-theme="dark"].mdx-page .hash-link,
+html[data-theme="dark"].community-page .hash-link {
   @extend %hash-link-style;
 }
 
@@ -334,6 +398,16 @@ html[data-theme="dark"] article .badge {
   }
 }
 
+.admonition {
+  text-align: left;
+  font-size: var(--ifm-blockquote-font-size);
+  line-height: var(--ifm-pre-line-height);
+
+  h5 {
+    font-size: 14px;
+  }
+}
+
 /* Home page */
 
 .homepage {
@@ -350,8 +424,6 @@ html[data-theme="dark"] article .badge {
 /* Community page */
 
 .community-page {
-  max-width: 1280px;
-
   h1 {
     font-size: 2.8rem;
   }
@@ -365,10 +437,6 @@ html[data-theme="dark"] article .badge {
     font-size: 1.5rem;
     margin-top: 16px;
     display: inline-block;
-  }
-
-  .container--fluid > div {
-    padding-top: 0 !important;
   }
 
   .row .col p a {
@@ -385,7 +453,7 @@ html[data-theme="dark"] article .badge {
   }
 }
 
-html[data-theme="dark"] .community-page {
+html[data-theme="dark"].community-page {
   .row .col p a {
     @extend %link-style-dark;
   }
@@ -435,7 +503,7 @@ html[data-theme="dark"] .avatar__name a {
 
 .avatar__subtitle {
   margin-top: 0;
-  font-weight: 600;
+  font-weight: 500;
   color: var(--subtle);
 }
 
@@ -522,38 +590,14 @@ a[class*="tagRegular"] {
     transform: rotate(180deg) scale(0.9);
   }
 
-  .react-toggle {
-    margin: 0 8px;
-
-    .react-toggle-track {
-      background: #3d3f47;
-      font-size: 15px;
-    }
-
-    .react-toggle-thumb {
-      border: 2px solid #4d4d4d;
-    }
-
-    &:hover {
-      .react-toggle-thumb {
-        border-color: var(--ifm-color-primary);
-      }
-    }
-  }
-
-  .react-toggle--focus {
-    .react-toggle-thumb {
-      box-shadow: 0 0 2px 3px #0099e085;
-    }
-  }
-
-  .navbar__toggle {
-    color: #fff;
+  .clean-btn:hover {
+    background: var(--ifm-color-emphasis-800);
   }
 
   .DocSearch-Button {
     border-radius: var(--ifm-global-radius);
     padding: 0 6px 0 10px;
+    font-family: var(--ifm-font-family-base);
 
     .DocSearch-Search-Icon {
       width: 16px;
@@ -615,6 +659,10 @@ a[class*="tagRegular"] {
     top: 18px;
     background: var(--brand);
   }
+
+  .navbar-sidebar__back:hover {
+    background: var(--ifm-code-background);
+  }
 }
 
 /*
@@ -669,12 +717,26 @@ So we need to "revert" some CSS vars to not enforce dark mode
   }
 }
 
-html[data-theme="dark"] .navbar-sidebar {
-  background: var(--ifm-background-color);
+html[data-theme="dark"] {
+  .navbar-sidebar {
+    background: var(--ifm-background-color);
+  }
+
+  .navbar button[class*='toggleButton']:hover {
+    background: var(--ifm-color-emphasis-200);
+  }
 }
 
 @media (max-width: 1200px) {
   .navbar {
+    .navbar__item.navbar__link {
+      font-size: 15px;
+
+      &.navbar__link--active:after {
+        top: 20px;
+      }
+    }
+
     .DocSearch-Button {
       padding: 0 12px;
       max-width: 40px;
@@ -690,27 +752,26 @@ html[data-theme="dark"] .navbar-sidebar {
 
 /* Sidebar */
 
-aside[class^="docSidebarContainer"] {
+aside[class^="theme-doc-sidebar-container"] {
   margin-right: 16px;
-
-  .menu > .menu__list > .menu__list-item {
-    margin-bottom: 4px;
-  }
-
-  --doc-sidebar-width: 266px;
 
   .thin-scrollbar {
     @extend %scrollbar-style;
   }
 
   .menu__list .menu__link--sublist,
-  a[class*="menuLinkText"] {
+  a[class*="menu__link--sublist-caret"] {
     font-size: 16px !important;
     font-weight: 700 !important;
     padding: 5px 12px !important;
-    color: var(--subtle) !important;
+    color: var(--ifm-color-content-secondary) !important;
 
     &:after {
+      display: none;
+    }
+
+    &[aria-expanded]:after {
+      display: block;
       background-size: 1.66rem 1.66rem;
       margin-right: -6px;
       margin-top: -1px;
@@ -718,8 +779,8 @@ aside[class^="docSidebarContainer"] {
   }
 
   .menu__list .menu__list .menu__link--sublist,
-  a[class*="menuLinkText"] {
-    font-weight: 600 !important;
+  a[class*="menu__link--sublist-caret"] {
+    font-weight: 700 !important;
     font-size: 15px !important;
   }
 
@@ -727,8 +788,12 @@ aside[class^="docSidebarContainer"] {
     padding-left: 8px !important;
   }
 
-  .menu__list-item-collapsible a[class*="menuLinkText"] {
-    background: var(--ifm-background-color) !important;
+  .menu__link {
+    justify-content: space-between;
+  }
+
+  .theme-doc-sidebar-item-category .menu__list .menu__list-item-collapsible {
+    margin-top: 6px;
   }
 
   @media only screen and (max-width: 1120px) {
@@ -737,7 +802,7 @@ aside[class^="docSidebarContainer"] {
 }
 
 @media only screen and (min-width: 997px) {
-  aside[class^="docSidebarContainer"] {
+  aside[class^="theme-doc-sidebar-container"] {
     .menu {
       padding: 12px;
     }
@@ -745,7 +810,7 @@ aside[class^="docSidebarContainer"] {
 }
 
 @media only screen and (max-width: 996px) {
-  aside[class^="docSidebarContainer"] {
+  aside[class^="theme-doc-sidebar-container"] {
     width: 0 !important;
     min-width: 0 !important;
     margin-right: 0;
@@ -780,7 +845,7 @@ aside[class^="docSidebarContainer"] {
       line-height: 20px;
       font-size: 13px;
       padding: 3px 12px;
-      font-weight: normal;
+      font-weight: 300;
       color: var(--ifm-font-color-base);
     }
 
@@ -865,6 +930,14 @@ div[class^="tableOfContents"] {
       padding: 0;
       border: 0;
     }
+
+    &:hover {
+      color: var(--ifm-link-color);
+
+      code {
+        color: var(--ifm-link-color);
+      }
+    }
   }
 
   .table-of-contents__link--active {
@@ -879,6 +952,14 @@ div[class^="tableOfContents"] {
       color: var(--ifm-font-color-base);
       white-space: nowrap;
     }
+
+    &:hover {
+      color: var(--ifm-font-color-base);
+
+      code {
+        color: var(--ifm-font-color-base);
+      }
+    }
   }
 }
 
@@ -887,7 +968,6 @@ html[data-theme="dark"] div[class^="tableOfContents"] {
 }
 
 button[class*="tocCollapsibleButton"] {
-  font-weight: 600;
   color: var(--ifm-color-content-secondary);
 }
 
@@ -1317,7 +1397,7 @@ h2 .label {
 }
 
 h3 .label {
-  top: -2px;
+  top: -3px;
   margin-left: 22px;
   line-height: 20px;
 }
@@ -1329,11 +1409,11 @@ td .label {
 
   &:before {
     left: -8px;
-    border-width: 9px 8px 9px 0;
+    border-width: 10px 8px 10px 0;
   }
 
   &:after {
-    top: 7px;
+    top: 8px;
   }
 
   &.required {
@@ -1365,7 +1445,7 @@ td .label {
   height: 6px;
   border-radius: 100%;
   margin-left: 4px;
-  margin-top: 8px;
+  margin-top: 7px;
   white-space: nowrap;
   overflow: hidden;
   color: transparent;
@@ -1570,6 +1650,10 @@ html[data-theme="dark"] .docsRating {
   grid-template-rows: 1fr;
   grid-template-areas: ". .";
 
+  div[class^="codeBlockContainer"] {
+    overflow: auto;
+  }
+
   div[class^="codeBlockLines"] {
     white-space: pre-wrap;
   }
@@ -1584,9 +1668,13 @@ html[data-theme="dark"] .docsRating {
   }
 }
 
-/* Blog sidebar */
+/* Blog */
 
-.main-wrapper.blog-wrapper {
+.blog-wrapper .main-wrapper {
+  h3[class*="sidebarItemTitle"] {
+    color: var(--ifm-font-color-secondary);
+  }
+
   .container.margin-vert--lg {
     max-width: calc(100% - (var(--ifm-spacing-horizontal)) * 4);
     margin-top: 0 !important;
@@ -1604,33 +1692,33 @@ html[data-theme="dark"] .docsRating {
       margin-right: 16px;
     }
 
+    .docusaurus-mt-lg {
+      margin-top: 2rem;
+    }
+
     footer {
-      strong {
+      b {
         font-weight: 500;
+      }
+
+      .text--right b {
+        font-weight: 700;
       }
     }
   }
 
   .container .row .col.col--3 {
     --ifm-col-width: calc(5 / 24 * 100%);
-    padding-left: 0;
-
-    &:last-child {
-      --ifm-col-width: calc(4 / 24 * 100%);
-      padding-right: 0;
-    }
+    padding: 0;
 
     div[class^="sidebar"] {
-      margin-left: 0;
-      margin-right: -16px;
-
       h3 {
         font-size: 16px;
         margin-bottom: 0;
       }
 
       h4 {
-        font-weight: 500;
+        font-weight: 700;
         font-size: 14px;
         margin-top: 14px;
         margin-bottom: 6px;
@@ -1656,26 +1744,27 @@ html[data-theme="dark"] .docsRating {
       --ifm-col-width: calc(18 / 24 * 100%);
     }
   }
+
+  article.margin-bottom--xl {
+    margin-bottom: 2.5rem !important;
+  }
 }
 
-html[data-theme="dark"] {
-  .main-wrapper.blog-wrapper {
+html[data-theme="dark"].blog-wrapper {
+  .main-wrapper {
     .row .col.col--3 div[class^="sidebar"] {
       @extend %scrollbar-style-dark;
-    }
-
-    .container.margin-vert--lg {
-      a.margin-horiz--sm,
-      a.padding-right--md {
-        @extend %link-style-dark;
-      }
     }
   }
 }
 
-@media only screen and (max-width: 1320px) and (min-width: 997px) {
-  .container.margin-vert--lg .row .col.col--3 {
-    margin-left: -32px;
+html[data-theme="light"].blog-wrapper {
+  .main-wrapper {
+    .container.margin-vert--lg {
+      .col.text--right a:hover {
+        color: var(--ifm-link-color);
+      }
+    }
   }
 }
 
@@ -1686,9 +1775,10 @@ html[data-theme="dark"] {
 
   .container.margin-vert--lg .row .col.col--7 {
     --ifm-col-width: 100% !important;
+    padding: 24px 16px !important;
   }
 
-  .main-wrapper:not(.community-page) {
+  html:not(.community-page) .main-wrapper {
     .container.margin-vert--lg {
       max-width: 96% !important;
     }
@@ -1714,6 +1804,7 @@ html[data-theme="dark"] {
     }
   }
 }
+
 .hot-link {
   position: relative;
   &:after {
